# lyaforecast

./: .gitignore  README.md  analytic_bias_McD2003.py  cosmoCLASS.py  linear_power_CLASS.py  plot_LyaP1D.py  plot_LyaP3D.py  plot_linPk.py  plot_noise.py  plot_qsoLF.py  pyproject.toml  qso_LF.py  requirements.txt  setup.py  spectrograph.py  test_class.py  theoryLyaP3D.py
data/: z_beta_bias.txt
examples/: plot_P1D.ipynb  plot_P1D.py  plot_P3D.ipynb  plot_P3D.py  plot_bias.ipynb  plot_camb_linPk.ipynb  plot_cosmo.ipynb  plot_cosmo.py  plot_fisher.ipynb  plot_fisher.py  plot_noise.ipynb  plot_noise.py  plot_qsoLF.ipynb  plot_qsoLF.py  test_fisher.ipynb  test_fisher.py
examples/.ipynb_checkpoints/: plot_P1D-checkpoint.ipynb  plot_P3D-checkpoint.ipynb  plot_camb_linPk-checkpoint.ipynb  plot_cosmo-checkpoint.ipynb  plot_fisher-checkpoint.ipynb  plot_noise-checkpoint.ipynb  plot_qsoLF-checkpoint.ipynb
examples/notebooks/: plot_P1D.ipynb  plot_P3D.ipynb  plot_camb_linPk.ipynb
examples/scripts/: plot_camb_linPk.py  plot_cosmo.py  plot_noise.py  plot_qsoLF.py
lyaforecast/: __init__.py  analystic_biases.py  analytic_bias_McD2003.py  analytic_biases.py  cosmoCAMB.py  covariance.py  fisher.py  forecast.py  forecast_old.py  plots.py  power_spectrum.py  results.py  spectrograph.py  survey.py  utils.py  weights.py
lyaforecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lyaforecast/scripts/: get_zeff.py  (+14 more)
py/: analytic_bias_McD2003.py  analytic_p1d_PD2013.py  constants.py  cosmoCAMB.py  forecast.py  qso_LF.py  spectrograph.py  survey.py  theoryLyaP3D.py
(+8 files in other folders)
